fixtures/frontend/milestone-2/invalid/pipe-case-guard-not-bool/main.aivi
fun broken:Text #value:Option Int =>
    value
     ||> Some x when x => "bad"
     ||> Some x => "small {x}"
     ||> None => "empty"
